--- a/AudioWave/View/WaveScrollView.xib
+++ b/AudioWave/View/WaveScrollView.xib
@@ -34,10 +34,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cQu-sC-tgW" customClass="WaveFormView" customModule="AudioWave" customModuleProvider="target">
-                            <rect key="frame" x="204.5" y="0.0" width="100" height="471"/>
+                            <rect key="frame" x="204.5" y="0.0" width="0.0" height="471"/>
                             <color key="backgroundColor" red="0.94509803920000002" green="0.95686274510000002" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="100" id="Hv9-Xf-wIf"/>
+                                <constraint firstAttribute="width" id="Hv9-Xf-wIf"/>
                             </constraints>
                         </view>
                     </subviews>
