--- a/AudioWave/ViewController/HomeVC.xib
+++ b/AudioWave/ViewController/HomeVC.xib
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,42 +33,42 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HqH-MW-buX" userLabel="Top">
-                    <rect key="frame" x="0.0" y="20" width="375" height="76"/>
+                    <rect key="frame" x="0.0" y="20" width="414" height="76"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D1k-Rg-DJZ">
-                            <rect key="frame" x="16" y="13" width="359" height="50"/>
+                            <rect key="frame" x="16" y="13" width="398" height="50"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" translatesAutoresizingMaskIntoConstraints="NO" id="HDF-HR-Jbe">
-                                    <rect key="frame" x="0.0" y="2.5" width="45" height="45"/>
+                                    <rect key="frame" x="0.0" y="2.6666666666666643" width="45" height="45"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="HDF-HR-Jbe" secondAttribute="height" id="PI5-ii-LU8"/>
                                         <constraint firstAttribute="width" constant="45" id="szg-4d-gA4"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Import file" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6NW-Hm-vN0">
-                                    <rect key="frame" x="61" y="14.5" width="78" height="21"/>
+                                    <rect key="frame" x="61" y="14.666666666666664" width="78" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Payphone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XSu-st-BO1">
-                                    <rect key="frame" x="61" y="0.0" width="268" height="21"/>
+                                    <rect key="frame" x="61" y="0.0" width="307" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maroon 5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5OW-NM-3ik">
-                                    <rect key="frame" x="61" y="29" width="268" height="21"/>
+                                    <rect key="frame" x="61" y="29" width="307" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="guz-8S-7rY">
-                                    <rect key="frame" x="0.0" y="0.0" width="359" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="398" height="50"/>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -98,13 +99,13 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Jp-Gt-orG" userLabel="Content">
-                    <rect key="frame" x="0.0" y="96" width="375" height="405"/>
+                    <rect key="frame" x="0.0" y="95.999999999999972" width="414" height="441.33333333333326"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EGo-Gq-NGd" userLabel="Top">
-                            <rect key="frame" x="-1" y="0.0" width="377" height="38"/>
+                            <rect key="frame" x="-1" y="0.0" width="416" height="38"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jfc-A1-jpn">
-                                    <rect key="frame" x="165.5" y="8" width="46" height="21"/>
+                                    <rect key="frame" x="185" y="8" width="46" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -125,20 +126,20 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8jn-5M-pL1" userLabel="Content">
-                            <rect key="frame" x="-1" y="38" width="377" height="329"/>
+                            <rect key="frame" x="-1" y="38" width="416" height="365.33333333333331"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6D-pA-ue6" customClass="WaveScrollView" customModule="AudioWave" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="377" height="329"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="416" height="365.33333333333331"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qfg-9C-5ZN">
-                                    <rect key="frame" x="0.0" y="164" width="377" height="1"/>
+                                    <rect key="frame" x="0.0" y="182.33333333333331" width="416" height="1"/>
                                     <color key="backgroundColor" red="0.82745098039999998" green="0.86274509799999999" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="2bz-EF-6SK"/>
                                     </constraints>
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mark" translatesAutoresizingMaskIntoConstraints="NO" id="4Hf-jd-Yt7">
-                                    <rect key="frame" x="185" y="0.0" width="6" height="329"/>
+                                    <rect key="frame" x="204.66666666666666" y="0.0" width="6" height="365.33333333333331"/>
                                 </imageView>
                             </subviews>
                             <constraints>
@@ -163,21 +164,21 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mns-qG-4Nf" userLabel="Bottom">
-                            <rect key="frame" x="0.0" y="367" width="375" height="38"/>
+                            <rect key="frame" x="0.0" y="403.33333333333331" width="414" height="38"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aBC-lZ-BK5" customClass="WaveFormView" customModule="AudioWave" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="38"/>
+                                    <rect key="frame" x="0.0" y="0.33333333333337123" width="414" height="38"/>
                                     <color key="backgroundColor" red="0.94509803920000002" green="0.95686274510000002" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="34a-xL-huG">
-                                    <rect key="frame" x="0.0" y="18.5" width="375" height="1"/>
+                                    <rect key="frame" x="0.0" y="19.000000000000057" width="414" height="1"/>
                                     <color key="backgroundColor" red="0.82745098039999998" green="0.86274509799999999" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="8Pn-Kz-cYr"/>
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gN-NS-IbB">
-                                    <rect key="frame" x="0.0" y="0.0" width="1" height="38"/>
+                                    <rect key="frame" x="0.0" y="0.33333333333337123" width="1" height="38"/>
                                     <color key="backgroundColor" red="0.0" green="0.65098039220000004" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="1" id="ev3-pf-b2e"/>
@@ -214,10 +215,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uia-U6-E55" userLabel="Bottom">
-                    <rect key="frame" x="0.0" y="501" width="375" height="166"/>
+                    <rect key="frame" x="0.0" y="537.33333333333337" width="414" height="198.66666666666663"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xif-AY-IIF">
-                            <rect key="frame" x="167" y="63" width="40" height="40"/>
+                            <rect key="frame" x="186.66666666666666" y="79" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="40" id="jAo-Cd-tgs"/>
                                 <constraint firstAttribute="width" secondItem="xif-AY-IIF" secondAttribute="height" id="uw5-jB-KLU"/>
@@ -225,7 +226,7 @@
                             <state key="normal" image="play"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mWf-qk-F2B">
-                            <rect key="frame" x="77" y="63" width="40" height="40"/>
+                            <rect key="frame" x="96.666666666666686" y="79" width="40.000000000000014" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="40" id="Df4-61-uX5"/>
                                 <constraint firstAttribute="width" secondItem="mWf-qk-F2B" secondAttribute="height" id="myj-Ky-DAQ"/>
@@ -233,7 +234,7 @@
                             <state key="normal" image="backward"/>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9rS-Fa-dXN">
-                            <rect key="frame" x="257" y="63" width="40" height="40"/>
+                            <rect key="frame" x="276.66666666666669" y="79" width="40" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="40" id="e8l-4V-eBC"/>
                                 <constraint firstAttribute="width" secondItem="9rS-Fa-dXN" secondAttribute="height" id="nkm-Ca-bVP"/>
@@ -241,7 +242,7 @@
                             <state key="normal" image="forward"/>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0x" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3gh-tU-mGq">
-                            <rect key="frame" x="172" y="33" width="30" height="21"/>
+                            <rect key="frame" x="191.66666666666666" y="58" width="30" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -250,10 +251,9 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="3gh-tU-mGq" firstAttribute="centerX" secondItem="xif-AY-IIF" secondAttribute="centerX" id="249-38-cKr"/>
-                        <constraint firstItem="xif-AY-IIF" firstAttribute="top" secondItem="3gh-tU-mGq" secondAttribute="bottom" constant="9" id="8U7-Ks-EnA"/>
+                        <constraint firstItem="xif-AY-IIF" firstAttribute="top" secondItem="3gh-tU-mGq" secondAttribute="bottom" id="8U7-Ks-EnA"/>
                         <constraint firstItem="xif-AY-IIF" firstAttribute="centerX" secondItem="Uia-U6-E55" secondAttribute="centerX" id="9YG-xs-5gW"/>
                         <constraint firstItem="9rS-Fa-dXN" firstAttribute="leading" secondItem="xif-AY-IIF" secondAttribute="trailing" constant="50" id="Etf-mZ-jIZ"/>
-                        <constraint firstAttribute="height" constant="166" id="FtY-YH-WBa"/>
                         <constraint firstItem="mWf-qk-F2B" firstAttribute="centerY" secondItem="Uia-U6-E55" secondAttribute="centerY" id="H6H-Bc-RfZ"/>
                         <constraint firstItem="xif-AY-IIF" firstAttribute="centerY" secondItem="Uia-U6-E55" secondAttribute="centerY" id="MFd-Rs-BOw"/>
                         <constraint firstItem="xif-AY-IIF" firstAttribute="leading" secondItem="mWf-qk-F2B" secondAttribute="trailing" constant="50" id="Qng-W2-LCN"/>
@@ -261,7 +261,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s3L-eV-ajo" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
-                    <rect key="frame" x="167.5" y="313.5" width="40" height="40"/>
+                    <rect key="frame" x="187" y="348" width="40" height="40"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="1oG-Hl-AUL"/>
@@ -285,6 +285,7 @@
                 <constraint firstItem="Uia-U6-E55" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="SEq-pj-ZB9"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Uia-U6-E55" secondAttribute="trailing" id="V6I-fI-AeA"/>
                 <constraint firstItem="s3L-eV-ajo" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="WvH-EL-8if"/>
+                <constraint firstItem="Uia-U6-E55" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.27" id="WxF-cZ-VM0"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8Jp-Gt-orG" secondAttribute="trailing" id="el8-H1-biT"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="HqH-MW-buX" secondAttribute="trailing" id="jeW-g0-YVD"/>
                 <constraint firstItem="HqH-MW-buX" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="nqJ-jc-aKj"/>
